# HFSM

./: .gitignore  CMakeLists.txt  ControllerTests.cpp  DeclarativeHfsmTests.cpp  HierarchyTests.cpp  LICENSE  README.md  RadioControllerTests.cpp  hfsm.h  main.cpp
.github/workflows/: ci.yml
examples/: CMakeLists.txt  device_power.cpp  toggle.cpp  traffic_light.cpp  traffic_light_annotated.cpp
tests/: CMakeLists.txt  CoverageTests.cpp  DeclarativeHfsmTests.cpp  RadioControllerTests.cpp  SerializerTests.cpp  StructureTests.cpp
tools/: hfsm_annotations.h  hfsm_generator.h  hfsm_structure.h
